--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,7 @@ TB_QUEUE_RABBIT_MQ_PASSWORD=
 TB_QUEUE_RABBIT_MQ_HOST=
 TB_QUEUE_RABBIT_MQ_PORT=5672
 
+TB_POSTGRESQL_URL=
+TB_POSTGRESQL_USER=
+TB_POSTGRESQL_PASSWORD=
+TB_POSTGRESQL_DB_NAME=
