--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,5 +10,9 @@ services:
       TB_QUEUE_RABBIT_MQ_PASSWORD: ${TB_QUEUE_RABBIT_MQ_PASSWORD}
       TB_QUEUE_RABBIT_MQ_HOST: ${TB_QUEUE_RABBIT_MQ_HOST}
       TB_QUEUE_RABBIT_MQ_PORT: ${TB_QUEUE_RABBIT_MQ_PORT}      
+      TB_POSTGRESQL_URL: ${TB_POSTGRESQL_URL}
+      TB_POSTGRESQL_USER: ${TB_POSTGRESQL_USER}
+      TB_POSTGRESQL_PASSWORD: ${TB_POSTGRESQL_PASSWORD}
+      TB_POSTGRESQL_DB_NAME: ${TB_POSTGRESQL_DB_NAME}      
     volumes:
       - ./mytb-data:/data
